[project]
name = "canva"
version = "0.0.0"
description = "An intuitive Python client for the canva.com API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
authors = [
    {name = "Yuri Ximenes", email = "yx.dev@gmx.ie"},
]
dependencies = [
    "requests",
    "typed @ git+https://github.com/ximenesyuri/typed",
    "utils @ git+https://github.com/ximenesyuri/utils"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["canva*"]

